--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.13.7",
+    "@mui/x-data-grid": "^6.16.0",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
     "date-fns": "^2.29.3",
