--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
     "@mui/material": "^5.13.7",
     "@mui/x-data-grid": "^6.16.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.29",
+    "@types/react-dom": "^18.2.14",
     "axios": "^0.26.1",
     "date-fns": "^2.29.3",
+    "gsap-trial": "^3.12.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-error-boundary": "^4.0.11",
+    "react-i18next": "^13.3.1",
     "react-query": "^3.39.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
@@ -25,6 +33,8 @@
     "react-toastify": "^9.0.0",
     "redux-mock-store": "^1.5.4",
     "resize-observer-polyfill": "^1.5.1",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +58,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
+    "@types/lodash": "^4.14.200",
     "gh-pages": "^6.0.0"
   }
 }
